src/objects/video__c.object
<CustomObject>
    <fields>
        <fullName>Production__c</fullName>
        <label>Production</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Talent__c</fullName>
        <label>Talent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>marketing__c</fullName>
        <label>marketing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>video</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>video Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>videos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>